# radiantNetScraping

./: .env-example  .gitignore  .gitmodules  LICENSE  README.md  channels.scm  docker-compose.yml  manifest.scm  requirements.txt  scrape.py  setup.sh
fronius_dashboard/: dev-manifest.scm  manifest.scm
fronius_scraper/: fronius_session.py  manifest.scm  pyproject.toml  requirements.txt  scrape.py  setup.sh
fronius_scraper/fronius_scraper/: data_parser.py  database.py  fronius_session.py  scrape.py  scripts.py
fronius_scraper/scripts/: parse_json_files.py  scrape.py
fronius_scraper/tests/: conftest.py  test_parse_json_files.py
fronius_scraper/tests/test_data/: default.json  emergency_power.json  from_gen_to_somewhere.json  paywalled.json  reduced_col_set.json  reduced_col_set2.json  reduced_col_set3.json
fronius_scraper/tests/test_infra/: anonymize_data_json.py
