[project]
requires-python = ">=3.9.9"
dependencies = [
    "beautifulsoup4==4.11.*",
    "lxml==4.9.*",
    "python-dotenv==0.21.*",
    "requests==2.31.*",
]
name = "fronius-scraper"
version = "0.1.0"
description = "Scraping & saving usage data from Fronius Solarweb."
authors = [{ name = "Cormochamelion", email = "cormocodran1.5@gmail.com" }]

[project.optional-dependencies]
development = ["black==22.12.*"]

[project.scripts]
fronius-scraper = "fronius_scraper.scripts:scrape"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fronius_scraper"]
